dataset1235/2025-2/1955397009/users/1340687653/executions/1107611404_1078076002.log
== RUN (2025-08-19 13:41:28)
-- CODE: 
X1=1.23
x2=0
print(x2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:37:43)
-- CODE: 
x1="Ufam"
print(x1)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:39:46)
-- CODE: 
x1=1.23
x2=0
print(x2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:40:32)
-- CODE: 
X1=1.23
x2=0
print(x2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:36:55)
-- CODE: 
x1=1.23

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:40:32)
-- CODE: 
X1=1.23
x2=0
print(x2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:42:03)
-- CODE: 
x1=1.23
x2=0
print(x2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:35:30)
-- CODE: 
x 1=1.23

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1=1.23
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1=1.23
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:36:35)
-- CODE: 
1=1.23

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    1=1.23
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    1=1.23
    ^
SyntaxError: cannot assign to literal here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:41:54)
-- CODE: 
x1=1.23
x2=0
print(X2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(X2)
          ^^
NameError: name 'X2' is not defined. Did you mean: 'x2'?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(X2)
          ^^
NameError: name 'X2' is not defined. Did you mean: 'x2'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:42:03)
-- CODE: 
x1=1.23
x2=0
print(x2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:40:32)
-- CODE: 
X1=1.23
x2=0
print(x2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
